code/dotnet/StandardDatafeed/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Standard Datafeed client library for .NET

[![API Version](https://img.shields.io/badge/api-v2.1.0-blue)](https://developer.factset.com/api-catalog/standard-datafeed-api)
[![Nuget](https://img.shields.io/badge/nuget-v2.0.0-orange)](https://www.nuget.org/packages/FactSet.SDK.StandardDatafeed/2.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

[The Standard DataFeed (SDF) Download API](https://www.factset.com/marketplace/catalog/product/factset-standard-datafeed-download-api) 
provides an alternative method for users to request and retrieve SDF packages (schemas & bundles). 
This service is not a direct replacement and does not have 100% feature parity with the Loader Application. 
This API provides an alternative for users who are unable to utilize the Loader application due to the following reasons:

* Inability to install 3rd party executables due to Corporate Security policies.

* Inability to utilize the Loader application due to limitations or restrictions with the environment used to consume Standard Datafeed.

* Clients who are utilizing existing delivery methods like FTP, who may want to use a more secure & modern solution.

This API allows users to retrieve

* Both SDF and the QFL (Quant Factor Library (Factor Family & Factor Groups)) packages they have subscriptions for, with data available since January 1, 1995.

Additional parameters are available to filter requests to get the exact files users are looking for.

QFL data is delivered through Content API & Bulk Data API (SDF API).

* Content API: Provides direct access to FactSet-hosted QFL data. Suitable for interactive, ad hoc QFL requests. Constraints on large extracts. Costs are based on consumption, i.e. more calls can result in more costs.

* Bulk Data API: Provides access to download locations of zip files for client download. Suitable for production processes within a client environment. Cost is based on the use case and fixed unless scope changes (same as other SDFs).

Please find all the content-related comprehensive documentation [here](https://my.apps.factset.com/oa/pages/15222).


This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.1.0
- SDK version: 2.0.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.StandardDatafeed -v 2.0.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.StandardDatafeed -Version 2.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.StandardDatafeed.Api;
using FactSet.SDK.StandardDatafeed.Client;
using FactSet.SDK.StandardDatafeed.Model;

namespace Example
{
    public static class GetListFilesExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.StandardDatafeed.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new SDFAndQFLContentLibraryApi(config);
            var schema = "fgp_v1";  // string | Name of the schema. (optional) 
            var bundle = "fgp_global_prices_am_v1";  // string | Name of the bundle. (optional) 
            var type = "full";  // string | Type of the file.  Note: - Full files are snapshots of the bundle capturing the most recent version of the bundle generated every weekend. When requesting 'Full' files, ensure that the date range includes weekend dates. - Delta files include the incremental changes (inserts, updates, deletes), since the last file and have incremental sequence numbers.    (optional)  (default to delta)
            var startDate = "2023-01-01";  // string | The earliest date of the feed file the API should fetch based on the file timestamp. Consider the following points:   - Dates provided in `startDate` and `endDate` along with `schema` parameter: The returned dataset is limited to a maximum of latest 30 days' worth of records. - Format: Should be absolute (YYYY-MM-DD).  (optional) 
            var startDateRelative = 56;  // int? | The earliest date of the feed file the API should fetch based on the file timestamp. Consider the following points:  - Dates provided in `startDate` and `endDate` along with `schema` parameter: The returned dataset is limited to a maximum of latest 30 days' worth of records. - Format: Specify the date using a relative term as an integer: '0' for today, '-1' for yesterday, '-2' for two days ago, and so forth. Negative values are used to represent past dates.  *Note:* - *Either `startDate` or `startDateRelative` should be used, but not both.* - *If both `startDate` and `startDateRelative` are provided in the same request, the API will return an error.* - *If users provide future dates in requests for `startDate` or `startDateRelative`, the API will not return any data.*  (optional) 
            var endDate = "2023-01-28";  // string | The latest date of the feed file the API should fetch for based on the file timestamp.  - Format: Should be absolute - YYYY-MM-DD.  (optional) 
            var endDateRelative = 56;  // int? | The latest date of the feed file the API should fetch for based on the file timestamp.  - Format: Specify the date using a relative term as an integer: '0' for today, '-1' for yesterday, '-2' for two days ago, and so forth. Negative values are used to represent past dates.  *Note:* - *Either `endDate` or `endDateRelative` should be used, but not both.* - *If both `endDate` and `endDateRelative` are provided in the same request, the API will return an error.* - *If users provide future dates in requests for `endDate` or `endDateRelative`, the API will not return any data.*  (optional) 
            var excludeRelatedBundles = false;  // bool? | Specifies whether to restrict the response to only the bundle(s) specified in the `bundle` parameter.  - `false`: the response includes files for the requested bundle(s) as well as any related bundles. - `true`: the response is restricted to only the files for the specified `bundle`; related bundles are excluded from the results.  (optional)  (default to false)
            var paginationLimit = 20;  // int? | Specifies the number of results to return per page. (optional)  (default to 20)
            var paginationOffset = 0;  // int? | Specifies the starting point for pagination. This parameter is used to identify the beginning of next set of results. (optional)  (default to 0)
            var sort = new List<string>(); // List<string> | Enables sorting data in ascending or descending chronological order based on startDate.  (optional) 

            try
            {
                // Returns delta & full files for the schemas.
                ListFile result = apiInstance.GetListFiles(schema, bundle, type, startDate, startDateRelative, endDate, endDateRelative, excludeRelatedBundles, paginationLimit, paginationOffset, sort);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling SDFAndQFLContentLibraryApi.GetListFiles: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/bulk-documents/sdf/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*SDFAndQFLContentLibraryApi* | [**GetListFiles**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/SDFAndQFLContentLibraryApi.md#getlistfiles) | **GET** /list-files | Returns delta & full files for the schemas.
*SDFAndQFLContentLibraryApi* | [**GethistoricalFiles**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/SDFAndQFLContentLibraryApi.md#gethistoricalfiles) | **GET** /historical-files | Returns full historic data of specified schema and bundle.
*SchemaApi* | [**GetListSchemaswithoutwithooutRequiredParameters**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/SchemaApi.md#getlistschemaswithoutwithooutrequiredparameters) | **GET** /list-schemas | List of Standard DataFeed (SDF) schemas.
*SchemaApi* | [**GetSchemaDetails**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/SchemaApi.md#getschemadetails) | **GET** /schema-details | Schema Details.


## Documentation for Models

 - [Model.ErrorExample](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/ErrorExample.md)
 - [Model.ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/ErrorResponse.md)
 - [Model.HistoricalFile](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/HistoricalFile.md)
 - [Model.HistoricalFileObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/HistoricalFileObject.md)
 - [Model.HistoricalFileObjectObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/HistoricalFileObjectObject.md)
 - [Model.ListFile](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/ListFile.md)
 - [Model.ListFileObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/ListFileObject.md)
 - [Model.ListFileObjectObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/ListFileObjectObject.md)
 - [Model.ListSchema](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/ListSchema.md)
 - [Model.ListSchemaObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/ListSchemaObject.md)
 - [Model.Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/Meta.md)
 - [Model.Pagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/Pagination.md)
 - [Model.SchemaDetail](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/SchemaDetail.md)
 - [Model.SchemaDetailObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/StandardDatafeed/v2/docs/SchemaDetailObject.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
